Use bothfather-stable gem for generated apis

--- a/gem_template/%app_name%.gemspec.tt
+++ b/gem_template/%app_name%.gemspec.tt
@@ -24,7 +24,7 @@ Gem::Specification.new do |spec|
 
   spec.add_dependency 'addressable', '~> 2.3'
   spec.add_dependency 'dry-configurable', '~> 0.11'
-  spec.add_dependency 'gemfather', '~> <%= version %>'
+  spec.add_dependency 'gemfather-stable', '~> <%= version %>'
   spec.add_dependency 'faraday', '>= 0.17', '< 2'
   spec.add_dependency 'faraday_middleware', '>= 0.13', '< 2'
   spec.add_dependency 'hashie', '>= 3.0', '< 5'
